--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <body onload="joke()">
   <!-- <header></header> -->
-  <section class="center">
+  <section class="container">
     <div class="boxout">
-      <div id="joke"></div>
+      <p id="joke" />
     </div>
   </section>
   <!-- <footer></footer> -->
